public/stylesheets/small.css
/* Styles specific to a small screen, such as iPhone, Android, etc... */

/* Default rules for the body of every page */

body {
  font-size: 12px;
}

h1 {
  font-size: 14px;
}

/* Rules for the whole left sidebar, including the logo */

#left {
  display: none;
}

/* Rules for tabbed navigation bar */

#tabnav
{
  height: 14px;
  margin: 0px;
  padding-left: 3px;
  padding-top: 5px;
  margin-top: 18px;
  background: url('../images/tab_bottom.gif') repeat-x bottom;
  font-size: 10px;
  line-height: 10px;
}

#tabnav a, #tabnav a:link, #tabnav a:visited 
{
  font-size: 10px;
  line-height: 10px;
  padding: 1px 5px;
  margin-right: 1px;
}

/* Rules for the site name - shown when left sidebar is hidden */

#small-title {
  font-size: 12px;
  line-height: 14px;
  display: block;
  position: absolute;
  top: 0;
  margin: 2px;
}

#small-title img {
  position: absolute;
}

#small-title h1 {
  position: absolute;
  left: 18px;
  font-size: 12px;
  margin: 2px;
}

/* Rules for greeting bar in the top right corner */

#greeting {
  position: absolute;
  top: 0px;
  right: 0px;
  height: 14px;
  font-size: 12px;
  line-height: 12px;
  white-space: nowrap;
  background: none;
}

#full-greeting {
  display: none;
}

#small-greeting {
  display: inline;
}

/* Rules for OpenLayers maps */

.olControlPanZoomBar {
  display: none;
}

/* Rules for the main content area */

#content {
  left: 10px;
  top: 47px;
}

/* Rules for the signup form */

#signupForm input[type="text"], #signupForm input[type="password"] {
  width: 100%;
}

#signupForm input#user_email {
  max-width: 30em;
}

#signupForm input#user_email_confirmation {
  max-width: 30em;
}

#signupForm input#user_display_name {
  max-width: 20em;
}

#signupForm input#user_pass_crypt {
  max-width: 20em;
}

#signupForm input#user_pass_crypt_confirmation {
  max-width: 20em;
}

/* Rules for the login form */

#loginForm input#user_email {
  width: 100%;
  max-width: 18em;
}

#loginForm input#user_password {
  width: 100%;
  max-width: 18em;
}

/* Rules for the profile page */

.user_map {
  width: 100% !important;
  height: 300px !important;
}

/* Rules for the browse pages */

#browse_navigation {
  width: 100% !important;
  margin-top: 0 !important;
}

#small_map, #browse_map {
  width: 100% !important;
}
#changeset_list tr {
  display: block;
  clear: left;
  width: 100%;
}

#changeset_list th {
  display: none;
}

#changeset_list td {
  display: block;
  float: left;
  padding-right: 10px;
}

#changeset_list td.comment, #changeset_list td.area {
  width: 96%;
  clear: left;
}

/* Rules for the diary entries pages */

#diary_entry_title, #diary_entry_body, #diary_entry_language_code, #diary_comment_body {
  width: 100% !important;
}

#usemap {
  display: block;
}

/* Rules for the messaging pages */

#message_title, #message_body {
  width: 100% !important;
}

